--- a/public/register.html
+++ b/public/register.html
@@ -22,7 +22,7 @@
 <body>
   <div class="wrap">
     <h1>Регистрация</h1>
-    <div class="note">После регистрации вы получите <b>1 день бесплатного доступа</b> к ИИ-консультанту. Затем можно выбрать тариф.</div>
+    <div class="note">После регистрации вы получите <b>1 день бесплатного доступа</b> к онлайн-помощнику. Затем можно выбрать тариф.</div>
 
     <div class="card">
       <div class="row">
